fix(styles): jumping content when switching between login and register

--- a/app/(auth)/login/login.module.css
+++ b/app/(auth)/login/login.module.css
@@ -49,7 +49,7 @@
 }
 
 .tab {
-  font-size: 12px;
+  font-size: 16px;
   text-decoration: none;
   color: rgba(17, 17, 17, 0.55);
   padding-bottom: 8px;
@@ -188,7 +188,6 @@
 
   .inner {
     width: 100%;
-    height: 100%;
     padding: 0;
     align-items: start;
   }
@@ -234,13 +233,11 @@
 
   .authCard {
     width: 100%;
-    height: 100vh;
     padding: 64px 64px;
   }
 
   .inner {
     width: 100%;
-    height: 100%;
     justify-content: center;
     align-items: start;
   }
