--- a/app/(auth)/register/register.module.css
+++ b/app/(auth)/register/register.module.css
@@ -49,7 +49,7 @@
 }
 
 .tab {
-  font-size: 12px;
+  font-size: 16px;
   text-decoration: none;
   color: rgba(17, 17, 17, 0.55);
   padding-bottom: 8px;
@@ -187,7 +187,6 @@
 
   .inner {
     width: 100%;
-    height: 100%;
     padding: 0;
   }
 
@@ -232,13 +231,11 @@
 
   .authCard {
     width: 100%;
-    height: 100vh;
     padding: 64px 64px;
   }
 
   .inner {
     width: 100%;
-    height: 100%;
     justify-content: center;
   }
 
